Fixing testimonials section heading alignment

--- a/style.css
+++ b/style.css
@@ -171,8 +171,12 @@ main{
   margin-top: -10px;
 }
 /* Testimonials Section */
+.testimonials-section .container{
+  text-align: center;
+  padding-top: 40px;
+}
 .testimonials {
-  padding: 100px 0;
+  padding: 30px 0;
   text-align: center;
   display: flex;
   justify-content: space-around;
